--- a/src/scripts/Home.html
+++ b/src/scripts/Home.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
   <title>Document</title>
 </head>
@@ -26,7 +27,56 @@
 <!-- end of navbar -->
 <!-- profile -->
   <div class="content">
-    <div class="text"></div>
+    <div class="text">
+      <div class="text-content">
+        <p>Hello!</p>
+        <h4>I'm <span>Muhammad Yusuf</span></h4>
+        <h6>An ordinary person who interst with<br>frontend developer</h6>
+        <button class="btn-hire">HIRE ME</button>
+        <button class="btn-resume">Resume</button>
+      </div>
+    </div>
+    <div class="hero">
+      <div class="box-one"></div>
+      <div class="box-two"></div>
+      <div class="box-three"></div>
+      <div class="ball">
+        <svg
+          width="119"
+          height="119"
+          viewBox="0 0 119 119"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <g id="ball">
+            <path
+              id="Vector"
+              d="M118.51 58.53V59.48C118.51 59.73 118.51 59.99 118.49 60.24C118.25 73.2024 113.724 85.7205 105.62 95.84C105.21 96.37 104.78 96.88 104.34 97.39C103.68 98.17 103 98.92 102.3 99.66C102.24 99.72 102.18 99.79 102.11 99.85L102.08 99.88C102 99.96 101.92 100.05 101.84 100.13C100.61 101.4 99.32 102.617 97.97 103.78C97.7 104.01 97.42 104.25 97.13 104.48C86.6893 113.15 73.5708 117.941 60 118.04C59.9 118.05 59.79 118.05 59.6899 118.05H59.3401C59.24 118.05 59.14 118.05 59.04 118.04C58.6899 118.04 58.35 118.03 58.0001 118.02C44.4264 117.699 31.3832 112.684 21.0901 103.83C20.8101 103.6 20.5301 103.36 20.2601 103.11C19.19 102.17 18.16 101.18 17.17 100.16C17.0902 100.08 17.01 99.99 16.9299 99.91L16.9 99.88C16.8301 99.82 16.77 99.75 16.71 99.69C15.87 98.81 15.0601 97.9 14.2801 96.97C13.85 96.46 13.43 95.94 13.0201 95.41C5.12157 85.3658 0.72155 73.0157 0.48999 60.24C0.46999 60 0.469971 59.75 0.469971 59.5V58.57C0.469971 58.46 0.46998 58.35 0.47998 58.24C0.621678 45.4392 4.94461 33.0358 12.79 22.92C13.1999 22.39 13.6199 21.87 14.05 21.36C14.84 20.4 15.6699 19.47 16.52 18.56C16.5801 18.49 16.64 18.43 16.71 18.36C16.71 18.35 16.7199 18.34 16.7299 18.33C16.81 18.25 16.8899 18.16 16.9799 18.08C18.09 16.93 19.2467 15.8233 20.45 14.76C20.72 14.51 21 14.27 21.28 14.04C31.8055 5.07486 45.1543 0.107114 58.98 0.0100098C59.0801 9.76585e-06 59.19 0 59.29 0H59.9399C73.4462 0.0847216 86.5116 4.81647 96.9399 13.4C97.2199 13.64 97.5 13.87 97.78 14.11C99.24 15.35 100.64 16.67 101.97 18.05C102.05 18.13 102.13 18.22 102.21 18.3L102.23 18.32C102.3 18.38 102.37 18.46 102.43 18.52C103.17 19.3 103.88 20.11 104.57 20.93C105.01 21.44 105.43 21.95 105.85 22.48C113.909 32.6712 118.358 45.2484 118.5 58.24C118.508 58.3364 118.512 58.4332 118.51 58.53V58.53Z"
+              fill="#FFB800"
+            />
+            <path
+              id="Vector_2"
+              d="M60 0.23999H58V118.24H60V0.23999Z"
+              fill="white"
+            />
+            <path
+              id="Vector_3"
+              d="M118.51 58.24H0V60.24H118.51V58.24Z"
+              fill="white"
+            />
+            <path
+              id="Vector_4"
+              d="M33.98 58.24C33.823 50.9522 31.9336 43.8065 28.4681 37.3936C25.0025 30.9806 20.0603 25.4846 14.05 21.36C13.62 21.87 13.2 22.39 12.7901 22.92C18.5685 26.8562 23.3247 32.1139 26.6639 38.2567C30.0032 44.3995 31.829 51.2501 31.99 58.24C32 58.57 32 58.9 32 59.24C32 59.58 32 59.91 31.99 60.24C31.8278 67.1833 30.0244 73.9897 26.7274 80.1025C23.4303 86.2152 18.7331 91.4607 13.02 95.41C13.4299 95.94 13.8499 96.46 14.28 96.97C20.2257 92.8332 25.1095 87.3497 28.533 80.9666C31.9566 74.5835 33.823 67.4815 33.98 60.24C34 59.91 34 59.57 34 59.24C34 58.91 34 58.57 33.98 58.24Z"
+              fill="white"
+            />
+            <path
+              id="Vector_5"
+              d="M86.01 60.24C86 59.91 86 59.58 86 59.24C86 58.9 86 58.57 86.01 58.24C86.1751 51.1186 88.0669 44.1437 91.5228 37.9148C94.9786 31.6859 99.8952 26.3892 105.85 22.48C105.43 21.95 105.01 21.44 104.57 20.93C98.3885 25.0294 93.2908 30.5638 89.7123 37.0609C86.1338 43.5579 84.1808 50.8244 84.02 58.24C84 58.57 84 58.91 84 59.24C84 59.57 84 59.91 84.02 60.24C84.1797 67.608 86.1091 74.8295 89.6457 81.2952C93.1823 87.7609 98.2222 93.2811 104.34 97.39C104.78 96.88 105.21 96.37 105.62 95.84C99.7287 91.9211 94.8699 86.6387 91.4561 80.4411C88.0422 74.2435 86.174 67.3137 86.01 60.24V60.24Z"
+              fill="white"
+            />
+          </g>
+        </svg>  
+      </div>
+    </div>
   </div>
 <!-- end of profile -->
 
